# regen-economic-reboot-framework

./: .markdownlint-cli2.jsonc  .markdownlint.jsonc  README.md  ROADMAP.md  SCOPE.md  VERSION.md  gaiaai-config.yaml  lychee.toml
.github/workflows/: docs-ci.yml
base/clickregen/: CONTRIBUTING.md  README.md
contracts/heb-hybrid-ecological-bonds/: contract.rs
contracts/heb-hybrid-ecological-bonds/heb-workspace/contracts/bond_series/: Cargo.toml
contracts/heb-hybrid-ecological-bonds/heb-workspace/contracts/bond_series/src/: tests.rs
contracts/ws0-credit-lifecycle-controller/: README.md  spec.md
contracts/ws0-mrv-adapter/: README.md  spec.md
forum-refs/: cosmos-stack-roadmap-2026.md  permissioned-cosmwasm-blueprint.md  state-of-regen-2025.md  ux-convergence-thread.md
meta/: ai-refactor-plan.md
meta/unmapped/: notes.txt
regen-economic-reboot-framework/: README.md
regen-economic-reboot-framework/ws1_poa/: MANIFEST_SHA256.txt  ONBOARDING.md  README.md
regen-economic-reboot-framework/ws4_market_governance_signaling/: SCOPE.md  coordination.md
regen-ux-convergence-v0.4.1/: README.md
regen-ux-convergence-v0.4.1/api/: api-schema.json
regen-ux-convergence-v0.4.1/schemas/: ai-signal-loop.md  koi-feedback-schema.json
systems/: system-map.md  ws5-ux-convergence.md
ux/: api-mock-endpoints.md  data-models.jsonld  ux-validation-pipeline.md
ux/regen-hub/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
ws1_poa/: .gitignore  ONBOARDING.md  README.md
(+167 files in other folders)
