[package]
name = "bond_series"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
schema = []

[dependencies]
cosmwasm-schema = "1.5.4"
cosmwasm-std = "1.5.4"
cw2 = "1.1.2"
cw-storage-plus = "1.2.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
cw-utils = "1.0.3"

heb-types = { path = "../../packages/heb-types" }
